# CosyVoice

./: pyproject.toml  sample.ipynb  test1.ipynb  test2.ipynb  test3.ipynb  test4.ipynb
src/cosyvoice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
