[build-system]
requires = ["setuptools >= 61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cosyvoice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.14"
dependencies = [
    "conformer==0.3.2",
    "diffusers==0.29.0",
    "hydra-core==1.3.2",
    "hyperpyyaml==1.2.3",
    "inflect==7.3.1",
    "librosa==0.10.2",
    "matcha-tts",
    "modelscope==1.20.0",
    "numpy==1.26.4",
    "omegaconf==2.3.0",
    "onnx==1.16.0",
    "onnxruntime==1.18.0 ; sys_platform == 'darwin' or sys_platform == 'win32'",
    "onnxruntime-gpu==1.18.0 ; sys_platform == 'linux'",
    "openai-whisper==20231117",
    "protobuf==4.25",
    "pyarrow==18.1.0",
    "pydantic==2.7.0",
    "pyworld==0.3.4",
    "setuptools<72",
    "soundfile==0.12.1",
    "tensorrt-cu12==10.13.3.9 ; sys_platform == 'linux'",
    "tensorrt-cu12-bindings==10.13.3.9 ; sys_platform == 'linux'",
    "tensorrt-cu12-libs==10.13.3.9 ; sys_platform == 'linux'",
    "torch==2.3.1",
    "torchaudio==2.3.1",
    "transformers==4.51.3",
    "wetext==0.0.4",
    "x-transformers==2.11.24",
]

[tool.uv]
override-dependencies = [
    "diffusers==0.29.0",
]

[tool.uv.extra-build-dependencies]
openai-whisper = ["setuptools<72"]

[tool.uv.sources]
matcha-tts = { git = "https://github.com/shivammehta25/Matcha-TTS.git", rev = "dd9105b34bf2be2230f4aa1e4769fb586a3c824e" }

[tool.setuptools.packages.find]
where = ["src"]
